gcc/testsuite/rust/rustc/ui/parser/issue-14303-struct.rs
struct X<'a, T, 'b> {
// { dg-error "" "" { target *-*-* } .-1 }
    x: &'a &'b T
}

fn main() {}

